--- a/MTD_Proj_01/MainWindow.xaml
+++ b/MTD_Proj_01/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MTD_Proj_01"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1000">
+        Title="Algorytm Johnsona" Height="600" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
